<resources>
    <string name="app_name">UpApp</string>
    <string name="Username">Username</string>
    <string name="Reset_Password">Reset password</string>
    <string name="Repeat_Password">Repeat password</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Email">Email Address</string>
    <string name="Phone_number">Phone number</string>
    <string name="Name_surname">Name and surname</string>
    <string name="Sign_in">Sign In</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Send">Send</string>
    <string name="PutYourEmail">Put your email address</string>
    <string name="lectures">Lecture Halls</string>
    <string name="libraries">Libraries</string>
    <string name="exams_h">Exams Halls</string>
    <string name="kudu">Kudu Terminals</string>
    <string name="dining_h">Dining Halls</string>
    <string name="main_campus">Main Campus</string>
    <string name="shops">Shops</string>
    <string name="labs">Laboratories</string>
    <string name="reses">Resedences</string>
    <string name="services">Services</string>
    <string name="welcome_to_upapp">Welcome to UpApp</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
</resources>
