<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/background_dark">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="426dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/main_campus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:background="@android:color/background_dark">

            <Button
                android:id="@+id/lecture"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/lectures"
                app:layout_constraintBottom_toTopOf="@+id/libraries"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/libraries"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/libraries"
                app:layout_constraintBottom_toTopOf="@+id/exams_h"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lecture" />

            <Button
                android:id="@+id/exams_h"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/exams_h"
                app:layout_constraintBottom_toTopOf="@+id/kudu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/libraries" />

            <Button
                android:id="@+id/labs"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/labs"
                app:layout_constraintBottom_toTopOf="@+id/reses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exams_h" />

            <Button
                android:id="@+id/reses"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/reses"
                app:layout_constraintBottom_toTopOf="@+id/services"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labs" />

            <Button
                android:id="@+id/services"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/services"
                app:layout_constraintBottom_toTopOf="@+id/kudu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reses" />

            <Button
                android:id="@+id/kudu"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/kudu"
                app:layout_constraintBottom_toTopOf="@+id/dining"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exams_h" />

            <Button
                android:id="@+id/dining"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:text="@string/dining_h"
                app:layout_constraintBottom_toTopOf="@+id/shops"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kudu" />

            <Button
                android:id="@+id/shops"
                android:layout_width="298dp"
                android:layout_height="39dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="10dp"
                android:text="@string/shops"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dining" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/main_campus"
        android:layout_width="298dp"
        android:layout_height="72dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"
        android:text="@string/main_campus"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
</android.support.constraint.ConstraintLayout>